Fix T92384: Wrong UV layers used with Boolean Modifier (Fast Solver)

Ensure the layers from the source mesh are used instead of the
object referenced by the boolean modifier.